Rough fix for overflow elements
Need a better solution

--- a/goh-app/src/pages/project/projectinfo/ProjectInfo.module.css
+++ b/goh-app/src/pages/project/projectinfo/ProjectInfo.module.css
@@ -42,3 +42,7 @@
 .task-btn {
     text-transform: none;
 }
+
+.overflow-handle {
+    overflow-y: scroll;
+}
